Solved sonar bugs, we need to fix Languages